# prx-packages

./: README.md  build.sh
SceLibCapstone/: CMakeLists.txt  exports.yml  libcapstone.patch
SceLibCapstone/src/: libc_bridge.s  main.c
SceLibJpeg/: CMakeLists.txt  exports.yml  libjpeg.patch
SceLibJpeg/src/: jconfig.h  jconfigint.h  main.c
SceLibPng/: CMakeLists.txt
SceLibVita2d/: CMakeLists.txt  exports.yml
SceLibVita2d/src/: main.c
SceLibYaml/: CMakeLists.txt
SceZlib/: CMakeLists.txt  exports.yml
SceZlib/src/: main.c
